# cookiecutter-terragrunt

./: .env.development  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
docs/: conf.py  index.md
tests/: test_cookiecutter_terragrunt.py
{{ cookiecutter.project_slug }}/: pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/docs/: conf.py  index.rst
{{ cookiecutter.repository_name }}/: .env.development  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.repository_name }}/docs/: conf.py  index.md
