[tool.poetry]
name = "cookiecutter-terragrunt"
version = "0.1.0"
description = ""
authors = ["caerulescens <caerulescens.github@proton.me>"]
readme = "README.md"
packages = [{include = "cookiecutter_terragrunt", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cookiecutter = "^2.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
select = ["F", "E", "W", "C90", "S", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D106", "N999"]

[tool.ruff.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
